# LAT_Loading

./: .gitignore  20250423_LAT_Examples.ipynb  README.md  abscal.ipynb  abscal.py  abscals.h5  abscals.pk  atmosphere_eff.pk  dark_dets.ipynb  dark_dets.py  db.sqlite  lat_iv_loading_now.ipynb  map_utils.py  mars_temps.py  mars_vs_saturn.ipynb  neps.ipynb  nets.ipynb  nets.py  optical_loading.ipynb  optical_loading.py  pyproject.toml  query_apex.py  r3v8_sim.pk  results_12032025.pk  smurf_det_preproc.yaml
bands/: LAT_UHF_bands.csv
ctxs/: .preprocess_lf.yaml.swp  lat_cfg.yaml  old_smurf_det_preproc.yaml  preprocess.yaml  preprocess_260604.yaml  preprocess_aso.yaml  preprocess_lf.yaml  preprocess_lf_260604.yaml  preprocess_nominal.yaml  preprocess_nominal_260616.yaml  smurf_det_preproc.yaml  smurf_detsets_local.yaml
latcom/: 20250423_LAT_Examples.ipynb  IV_curve_heating.ipynb  abscal.ipynb  abscal.py  indv_nets.ipynb  mars_vs_saturn.ipynb  neps.ipynb  neps.py  nets.ipynb  nets.py  optical_loading.ipynb  optical_loading.py  planet_beam_profiles.py  query_apex.py  yields.ipynb
latcom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
latcom/bands/: bands.py
latcom/notebooks/: IV_curve_heating.ipynb  abscal.ipynb  aso_vs_nominal.ipynb  cut_source.ipynb  indv_nets.ipynb  indv_yields.ipynb  neps.ipynb  nets.ipynb  optical_loading.ipynb  yields.ipynb
latcom/planet_models/: core.py  mars_temps.py  neptune_temps.py  (+2 more)
planet_models/: core.py  mars_temps.py  saturn_temps.py  uranus_temps.py
utils/: abscal_utils.py  map_utils.py  optical_loading.py  parsing.py
(+7 files in other folders)
