[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["latcom"]

[project]
name = "latcom"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "astropy",
    "dill",
    "h5py",
    "matplotlib",
    "mars_model @ git+https://github.com/Sulla2012/mars_model",
    "numpy",
    "pandas",
    "pixell",
    "pyephem",
    "PyYAML",
    "Requests",
    "scipy",
    "so3g",
    "sotodlib",
    "ruff",
]

[too.ruff]
exclue=["*.ipynb"]

[tool.ruff.lint]
preview = true
extend-select = ["I", "DOC501"]


[tool.ruff.lint.pydocstyle]
convention = "numpy"
